Fix crash in PeerConnector destruction

BUG: 233775

svn path=/trunk/extragear/network/libktorrent/; revision=1114050